# lircom

./: .classpath  .gitignore  .project  4x4.xlsx  LICENSE-ImpactVL  Main.java  Makefile  README-Route-Graph.md  README.md  all.bat  all.ps1  all.sh  app.js  build.xml  channel.sh  chat.sh  cross.sh  env.bat  env.sh  fxlircom.manifest  html.sh  impact.html  impact3d.bat  impact3d.html  impact3d.manifest  impact3d.sh  impactVL.sh  index.html  kanal.sh  lircom.bat  lircom.manifest  lircom.sh  lirshort.sh  local.html  mac.sh  main.sh  mykeystore  package-lock.json  package.json  peer.bat  (+13 more)
Lircom.nib/: keyedobjects.nib
backup/: backupsrc.tar
backup/backup/: CardItem.java  Game.java
backup/backup2/impact/: LineHandler.java  (+2 more)
backup/lircom.2007/: build.xml
backup/lircom.2013/: .classpath
backup/lircom.bu2/: LirComIdeas.rtf  Makefile  browser.bat  build.xml  rules3  run.sh  runbridge.sh  runlircom.sh  servers.txt
backup/lircom.suspicious/: .classpath  Makefile  advertise.php  advertisement.sql  build.xml  capdes.txt  design.txt  ldl  rules2  run.sh  runbridge.sh  runlircom.sh
backup/lircomas/: Animator.as  BabelFish.as  Bridge.as  Channel.as  Chat.as  Client.as  ClientConnect.as  ClientException.as  ClientOnServer.as  Errors.as  ExampleFileFilter.as  Heathens.as  Hyperactive.as  IRCBridge.as  IRCClient.as  Identd.as  Kanal.as  Lircom.as  MainApplet.as  MainWindow.as  Makefile  Message.as  Peer.as  PossibleConnection.as  ReceiveChatInterface.as  Runestone.as  SVGFE.as  SendChatInterface.as  SendCommandInterface.as  ServerAdvertise.as  Smiley.as  Synth.as  Trade.as  WindowAspect.as  afternet.config
backup/solitaire.backup/: Stack.java.bak  Stack.java.bu
backup/solitaire.old.backup/: CardItemMiner.java  StackMiner.java
config/: afternet.config  ircstorm.config  robothive.org
lircom.mac/: README.md  mac.sh  run.sh
lircom.win/: README.md  impact3d.sh  solitaire.sh  win.bat
nbproject/private/: private.properties
newbackup/backup/: Log.java  Stack.java
newbackup/lircom.2020/: Makefile  foo.py  runbot.sh
patch-agent/: dependency-reduced-pom.xml  pom.xml
src/: symbridge.tar  yottzumm.jnlp
src/dm/: dm.py
src/web/: bounce.sh  malvok.jnlp  start.jsp  yottzumm.jnlp
web/: advertise.pl.bu  dealer.jnlp  faq.html  helloworld.php  kanal.jnlp  lircom.jnlp  sound.jnlp  start.jsp  template.jnlp
(+401 files in other folders)
