[project]
name = "lircom"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argcomplete==3.6.3",
    "certifi==2026.2.25",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.135.1",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.7.2",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "packaging==26.0",
    "pipx==1.10.1",
    "platformdirs==4.9.4",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "userpath==1.9.2",
    "uvicorn==0.42.0",
]
