[project]
name = "lircom"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
	"annotated-doc==0.0.4",
	"annotated-types==0.7.0",
	"anyio==4.14.1",
	"certifi==2026.6.17",
	"click==8.4.2",
	"colorama==0.4.6",
	"fastapi==0.136.0",
	"filelock==3.28.0",
	"fsspec==2026.6.0",
	"h11==0.16.0",
	"hf-xet==1.5.1",
	"httpcore==1.0.9",
	"httpx==0.28.1",
	"huggingface_hub==1.11.0",
	"idna==3.18",
	"Jinja2==3.1.6",
	"markdown-it-py==4.2.0",
	"MarkupSafe==3.0.3",
	"mdurl==0.1.2",
	"mpmath==1.4.1",
	"networkx==3.6.1",
	"numpy==2.4.4",
	"packaging==26.2",
	"pydantic==2.13.4",
	"pydantic_core==2.47.0",
	"Pygments==2.20.0",
	"PyYAML==6.0.3",
	"regex==2026.6.28",
	"rich==15.0.0",
	"safetensors==0.8.0",
	"sentencepiece==0.2.1",
	"setuptools==81.0.0",
	"shellingham==1.5.4",
	"starlette==1.3.1",
	"sympy==1.14.0",
	"tokenizers==0.23.1",
	"torch==2.12.1",
	"tqdm==4.67.3",
	"transformers==5.5.4",
	"typer==0.26.8",
	"typing-inspection==0.4.2",
	"typing_extensions==4.15.0",
	"uvicorn==0.44.0"
]
